testing out git push
testing out if git push will work after using git push -u origin main

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Affy's Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <p>testing out if git push will work</p>
+  </body>
 </html>
