Created skeleton layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Affy's Calculator</title>
   </head>
   <body>
-    <p>testing out if git push will work</p>
+    <main class="responsive-container">
+      <div class="calc-container">
+        <div class="screen-div">
+          <div class="screen"></div>
+        </div>
+        <div class="keypad"></div>
+      </div>
+    </main>
   </body>
 </html>
