created keypad box

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="screen-div">
           <div class="screen"></div>
         </div>
-        <div class="keypad"></div>
+        <div class="keypad-div">
+          <div class="keypad-box"></div>
+        </div>
       </div>
     </main>
   </body>
