--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
           <div class="screen"></div>
         </div>
         <div class="keypad-div">
-          <div class="keypad-box"></div>
+          <div class="keypad-box">
+            <div class="keypad-button" class="c">C</div>
+
+            <div class="keypad-button plus-slash-minus">%</div>
+
+            <div class="keypad-button %">%</div>
+            <div class="keypad-button +/-">\</div>
+            <div class="keypad-button 7">7</div>
+            <div class="keypad-button 8">8</div>
+            <div class="keypad-button 9">9</div>
+            <div class="keypad-button X">X</div>
+            <div class="keypad-button 4">4</div>
+            <div class="keypad-button 5">5</div>
+            <div class="keypad-button 6">6</div>
+            <div class="keypad-button -">-</div>
+            <div class="keypad-button 1">1</div>
+            <div class="keypad-button 2">2</div>
+            <div class="keypad-button 3">3</div>
+            <div class="keypad-button +">+</div>
+            <div class="keypad-button 0">0</div>
+            <div class="keypad-button -">-</div>
+            <div class="keypad-button =">=</div>
+            <!-- <div class="keypad-button"></div> -->
+          </div>
         </div>
       </div>
     </main>
