changed class name
class name can not start with symbols or numbers

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 
             <div class="keypad-button plus-slash-minus">%</div>
 
-            <div class="keypad-button %">%</div>
-            <div class="keypad-button +/-">\</div>
-            <div class="keypad-button 7">7</div>
-            <div class="keypad-button 8">8</div>
-            <div class="keypad-button 9">9</div>
-            <div class="keypad-button X">X</div>
-            <div class="keypad-button 4">4</div>
-            <div class="keypad-button 5">5</div>
-            <div class="keypad-button 6">6</div>
-            <div class="keypad-button -">-</div>
-            <div class="keypad-button 1">1</div>
-            <div class="keypad-button 2">2</div>
-            <div class="keypad-button 3">3</div>
-            <div class="keypad-button +">+</div>
-            <div class="keypad-button 0">0</div>
-            <div class="keypad-button -">-</div>
-            <div class="keypad-button =">=</div>
+            <div class="keypad-button percent">%</div>
+            <div class="keypad-button slash">\</div>
+            <div class="keypad-button seven">7</div>
+            <div class="keypad-button eight">8</div>
+            <div class="keypad-button nine">9</div>
+            <div class="keypad-button x">X</div>
+            <div class="keypad-button four">4</div>
+            <div class="keypad-button five">5</div>
+            <div class="keypad-button six">6</div>
+            <div class="keypad-button minus">-</div>
+            <div class="keypad-button one">1</div>
+            <div class="keypad-button two">2</div>
+            <div class="keypad-button three">3</div>
+            <div class="keypad-button plus">+</div>
+            <div class="keypad-button zero">0</div>
+            <div class="keypad-button minus">-</div>
+            <div class="keypad-button equal-to">=</div>
             <!-- <div class="keypad-button"></div> -->
           </div>
         </div>
