c class wasn't working, edited the class name

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="keypad-div">
           <div class="keypad-box">
-            <div class="keypad-button" class="c">C</div>
+            <div class="keypad-button c">C</div>
 
-            <div class="keypad-button plus-slash-minus">%</div>
+            <div class="keypad-button plus-slash-minus">+/-</div>
 
             <div class="keypad-button percent">%</div>
             <div class="keypad-button slash">\</div>
@@ -36,6 +36,7 @@
             <div class="keypad-button zero">0</div>
             <div class="keypad-button minus">-</div>
             <div class="keypad-button equal-to">=</div>
+
             <!-- <div class="keypad-button"></div> -->
           </div>
         </div>
