added divs for the icons in the screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <main class="responsive-container">
       <div class="calc-container">
         <div class="screen-div">
-          <div class="screen"></div>
+          <div class="screen">
+            <div class="icons">
+              <div class="status-bar"></div>
+              <div class="stopwatch"></div>
+            </div>
+
+            <div class="numbers">
+              <div class="input"></div>
+              <div class="output"></div>
+            </div>
+          </div>
         </div>
         <div class="keypad-div">
           <div class="keypad-box">
