--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
               <div class="status-bar"></div>
               <div class="stopwatch"></div>
             </div>
-
+            <div class="screen-gap"></div>
             <div class="numbers">
               <div class="input"></div>
-              <div class="output"></div>
+              <div class="output">51,948</div>
             </div>
           </div>
         </div>
