edited minor error in color due to wrong class

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="keypad-button three">3</div>
             <div class="keypad-button plus">+</div>
             <div class="keypad-button zero">0</div>
-            <div class="keypad-button minus">-</div>
+            <div class="keypad-button dot">.</div>
             <div class="keypad-button equal-to">=</div>
 
             <!-- <div class="keypad-button"></div> -->
